# diffusion

./: .gitignore  .gitmodules  README.md  commit_list.txt  launch.sh  pyproject.toml
beamer_reports/: beamer.tex  brownian.md  generate_brownian.py  hand_calculations_imported.tex  hierarchical.tex  recap_tikz.tex  write_in_tikz.py
models/2dvolumetricanim/: anim.py
models/cifar/: cifar_linear.py
models/cifar_entropy/: cifar_entropy.py
models/collapsetime/: tc_vs_alpha.py
models/linear/: linear_mnist.ipynb  linear_mnist.py
models/manifoldrandom/: viz.py
models/potentials/: potentialviz.py
models/poup/: mnist_accuracy.ipynb
refs/biroli/: birolinotes.md
refs/biroli/tex/: no_journal.bbl  no_journal.tex  pnas-sample.bib
refs/biroli/tex/No_journal/: natdin_et_al.tex  style.sty
refs/mezardmanifold/: notes.md
refs/seance/: 18.md
results/hierarchical/: plot_potential.py
results/potentials/: gifsplitter.py
tests/: test_cupy.py  test_torch.py
